<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/registerLayout"
    tools:context="com.example.belasri.hiresell.RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar"></include>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:elevation="5dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:text="@string/Register"
                android:textColor="@color/colorPrimary"
                android:fontFamily="sans-serif"
                android:textSize="30sp"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"></View>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_fullname_layout"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="32dp"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:inputType="text"
                    android:hint="@string/full_name"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_email_layout"
                android:textAlignment="center"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="32dp"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_password_layout"
                android:layout_below="@+id/text_email_layout"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="32dp"
                app:passwordToggleEnabled="true"
                app:counterOverflowTextAppearance="@style/textErrorColor"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:onClick="registerNewUser"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="24dp"
                android:text="I already have an account"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:textSize="16sp"/>
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/snackbar"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>

