<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.belasri.hiresell.ContactActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar"></include>
    </RelativeLayout>
    <ScrollView
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:elevation="5dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:id="@+id/title"
                android:text="@string/Contact"
                android:textColor="@color/colorPrimary"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="30sp"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"></View>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_fullname_layout"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="32dp"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:inputType="text"
                    android:hint="@string/full_name"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_pseudo_layout"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="32dp"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/pseudo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:inputType="text"
                    android:hint="@string/email"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_message_layout"
                android:layout_below="@+id/text_pseudo_layout"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="32dp"
                app:passwordToggleEnabled="true"
                app:counterOverflowTextAppearance="@style/textErrorColor"
                >
                <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:hint="Message"
                        />
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn"
                android:text="@string/Send"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                style="@style/buttonRaised"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>



