<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.belasri.hiresell.CreateAds">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar"></include>
    </RelativeLayout>
    <ScrollView
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:elevation="5dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:id="@+id/title"
                android:text="@string/post_ad"
                android:textColor="@color/colorPrimary"
                android:fontFamily="sans-serif"
                android:textSize="30sp"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"></View>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_category_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="50dp">
                <Spinner
                    android:id="@+id/categorieSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_city_layout"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="32dp"
                >
                <Spinner
                    android:layout_margin="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/citySpinner" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_title_layout"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="32dp"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/adtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:inputType="text"
                    android:hint="@string/title"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_body_layout"
                android:layout_below="@+id/text_title_layout"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="32dp"
                android:inputType="textMultiLine"
                app:passwordToggleEnabled="true"
                app:counterOverflowTextAppearance="@style/textErrorColor"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/adbody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:hint="@string/description"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_phone_layout"
                android:layout_below="@+id/text_body_layout"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="32dp"
                app:passwordToggleEnabled="true"
                app:counterOverflowTextAppearance="@style/textErrorColor"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/userTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="Phone"
                    />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <ImageButton
                    android:id="@+id/image_uploaded"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:src="@drawable/ic_camera"
                    android:onClick="uploadAdImage"
                    android:layout_height="150dp"
                    android:padding="10dp"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn"
                android:text="@string/add_add"
                android:textColor="@color/white"
                android:onClick="createNewAd"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>



