<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileLayout"
    tools:context="com.example.belasri.hiresell.ProfileActivity"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/cover_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/header" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_btn"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_below="@+id/cover_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-60dp"
                android:onClick="uploadProfileImage"
                android:background="@drawable/profile_image_border"
                android:elevation="5dp"
                android:padding="20dp"
                android:scaleType="centerCrop"
                android:tag="profileDefaultImage"
                android:src="@drawable/abc56789" />

            <RelativeLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cover_image"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                android:paddingBottom="24dp">
                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="76dp"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/user_profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_profile_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:textColor="#fff"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/user_profile_txtphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_profile_email"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:textColor="#fff"
                    android:textSize="14sp" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_layout"
                android:layout_marginTop="5dp"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_fullname_layout"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="32dp"
                    >
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/user_profile_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:inputType="text"
                        android:hint="@string/full_name"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_phone_layout"
                    android:textAlignment="center"
                    android:layout_marginLeft="32dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="32dp"
                    >
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/user_profile_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:inputType="phone"
                        android:hint="@string/phone"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn"
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/white"
                    android:onClick="addUserInfo"
                    android:text="@string/update_user"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
